ChangeLog for RQL
=================

 --
    * UNION support
	
2008-03-26  --  0.17.2
    * fix a bug in get_solutions,possible_types should be reseted first
    * some documentation update
	
2008-03-12  --  0.17.1
    * method to add group variable with undoing support
    * fix remove_sort_term
	
2008-02-27  --  0.17.0
    * use bool values for Boolean constants, None for NULL constant
    * allow one char relation names
    * allow multiple capitalized characters in entity types
	
2008-02-15  --  0.16.0
    * understand "C is NULL"
    * allow multiple annotation
    * fix stinfo['possibletypes']
	
2008-01-25  --  0.15.4
    * better add_type_restriction methods
    * nicer error message in stcheck
    * fix some buggy assertion in editextensions
	
2008-01-17  --  0.15.3
    * only put valuable relations in uidrels
    * always put an operator node as rhs children of a Relation
    * fix rewrite-shared_optional to correctly update stinfo
    * new index_path / go_to_index_path methodes

2008-01-14  --  0.15.2
    * fix nested aggregat checking
    * fix a bug in Relation.__repr__
    * fix should_register_op which was expected to be a property
    * support for undoing limit/offset change
	
2008-01-07  --  0.15.1
    * ensure some attributes are encoded strings
	
2007-12-11  --  0.15.0
    * cleanup, optimizations, some api changes
	
2007-11-26  --  0.14.0
    * Node.get_type take kwargs as second argument to better guess the type of
      constants
    * new attrvars stinfo
    * new scope attribute on other nodes than Variable
    * thread safety for the RQLHleper
	
2007-10-29  --  0.13.0
    * use lgc.adbh module

2007-10-23  --  0.12.0
    * add ILIKE comparison operator, '~=' operator is now aliased to ILIKE
      instead of LIKE
    * variable scope handling
	
2007-06-04  --  0.11.3
    * as_string w/ kwargs fix
    * get_description fix on Variable, enhancement on Function by delegating
      to the function's description

2007-05-23  --  0.11.2